[releng] add test job
Change-Id: I5a55ee671c328d30ffcda2f04dd2045a3a53737e
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>