@@ -271,8 +271,8 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,download_TP,import_tests_projects,copy_egf_to_tools_folder" />
-	<target name="import_tests_projects" depends="import_tests_projects_BuildStep_1,import_tests_projects_PublishStep_2,import_tests_projects_build_feature" />
+	<target name="all" depends="CleanStep_1,download_TP,import_tests_projects,TestStep_4" />
+	<target name="import_tests_projects" depends="import_tests_projects_BuildStep_1,import_tests_projects_PublishStep_2" />
 	<target name="CleanStep_1" >
 		<antcall target="clean.result" />
 	</target>
@@ -313,33 +313,18 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-	<target name="import_tests_projects_PublishStep_2" depends="init,install.buckminster" >
-
-		
-		<echo message="Generate Site"/>
-		<buckminster command="perform">
-			<globargs>
-				<arg value="-Dsite.include.top=true"/>
-				<arg value="-Dsite.signing=false"/>				
-				<arg value="-Dcbi.include.source=true"/>				
-			</globargs>
-			<cmdargs>
-				<arg value="org.polarsys.kitalpha.releng.feature:eclipse.feature#site.p2" />
-			</cmdargs>
-		</buckminster>
-
-		<echo message="Publish site"/>
-		<mkdir dir="${publish}/org.polarsys.kitalpha.releng.feature/site.p2/"/>
-		<copy todir="${publish}/org.polarsys.kitalpha.releng.feature/site.p2/">
-			<fileset dir="${result}/output">
-				<include name="org.polarsys.kitalpha.releng.feature*/site.p2/*"/>
-				<include name="org.polarsys.kitalpha.releng.feature*/site.p2/**"/>
-			</fileset>
-			<filtermapper>
-				<replaceregex pattern=".*site\.p2" replace="" />
-			</filtermapper>
-		</copy>
-		
+	<target name="TestStep_4" depends="init,install.buckminster">
+	  <echo message="Running Junit tests " />
+      <buckminster command="junit">
+        <cmdargs>
+          <arg value="-l" />
+          <arg value="org.polarsys.kitalpha.resourcereuse.tests/Resource_Reuse_Tests.launch" />
+          <arg value="-o" />
+          <arg value="${result}/testReportTestStep_4.xml" />
+          <arg value="--terseXML" />
+          <arg value="--flatXML"/>
+        </cmdargs>
+      </buckminster>
 	</target>
 
 
@@ -369,48 +354,4 @@ This file was generated by Eclipse EGF
 </target> 
 
 
-
-	<target name="copy_egf_to_tools_folder">
-		<antcall target="copy_egf_to_tools"/>
-	</target>
-
-<target name="copy_egf_to_tools">
-	<delete dir="${tools}/egf"/>
-	<copy todir="${tools}/egf">
-    		<fileset dir="${publish}/TP_build"/>
-  	</copy>
-</target>
-
-	<target name="import_tests_projects_build_feature" depends="init,install.director" >
-        <eclipse.launch app="director">
-            <args>
-                <jvmarg value="-Declipse.p2.mirrors=false" />
-                    <jvmarg value="-Xmx1024m"/>
-                    <jvmarg value="-XX:MaxPermSize=256m"/>
-
-
-            	<arg value="-roaming" />
-            	<arg value="-profileProperties" />
-                <arg value="org.eclipse.update.install.features=true " />
-
-                <arg value="-d" />
-                <arg value="${publish}/TP_build" />
-                
-                <arg value="-p" />
-                <arg value="SDKProfile" />
-
-
-                <arg value="-r" />
-                <arg value="file:/${publish}/org.polarsys.kitalpha.releng.feature/site.p2" />
-                
-
-
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.releng.feature.feature.group" />
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.releng.source.feature.feature.group" />
-
-            </args>
-        </eclipse.launch>
-	</target>	
 </project>
